@@ -1,3 +1,9 @@
+2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
+	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
+	  coord was being ignored in comparisons of nodes). This fixes the
+	  Monitor Training problem. Probably fixes countless other pathfinding
+	  problems too.
+
 2002-07-27  Max Horn  <max@quendi.de>
 
 	* audio/Audio.cc: Replaced the pseudo-breshenham audio interpolation code
